Resolved login layout issue for very small screens.

--- a/public/styles/_core/player.scss
+++ b/public/styles/_core/player.scss
@@ -1,3 +1,10 @@
+// Login form
+#login {
+	input[type=text] {
+		width: 100%;
+		max-width: 290px;
+	}
+}
 .form-prompt {
 	color: white;
 	background-color: $color-dark-orange;
